unpackaged/main/default/objects/pse__Team_Schedule_Template__c/pse__Team_Schedule_Template__c.object-meta.xml
<CustomObject>
    <description>Template for team schedule.</description>
    <label>Team Schedule Template</label>
    <nameField>
        <label>Team Schedule Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Schedule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>