unpackaged/main/default/objects/pse__Team_Schedule_Template__c/fields/pse__Date_Last_Used__c.field-meta.xml
<CustomField>
    <fullName>pse__Date_Last_Used__c</fullName>
    <inlineHelpText>The date the Team Schedule Template was last used for a Team Schedule.</inlineHelpText>
    <label>Date Last Used</label>
    <type>Date</type>
</CustomField>