unpackaged/main/default/objects/pse__Team_Schedule_Template__c/fields/pse__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the schedule template is the default for the team.</description>
    <inlineHelpText>If selected, the schedule template is the default for the team.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>