unpackaged/main/default/objects/pse__Team_Schedule_Template__c/fields/pse__Team__c.field-meta.xml
<CustomField>
    <fullName>pse__Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The team associated with the template.</description>
    <inlineHelpText>The team associated with the template.</inlineHelpText>
    <label>Team</label>
    <referenceTo>pse__Team__c</referenceTo>
    <relationshipLabel>Team Schedule Templates</relationshipLabel>
    <relationshipName>Team_Schedule_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>